--- a/index.html
+++ b/index.html
@@ -108,25 +108,25 @@ $(document).ready(function() {
 <body class="body">
     <div class="tm-container mx-auto" >
         <section class="tm-section tm-section-1">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                        <div style="margin-top: 20px;" class="tm-bg-circle-white tm-flex-center-v shadow-lg p-3 mb-5 text-center">
+            <div class=" gifcontainer">
+                <div class="gifrow row">
+                  <div class="gifclass col-sm-12 col-md-12 col-lg-6 col-xl-6" style="text-align: center">
+                      <img src="img/gif1.gif" style="margin: auto" min-width="300px" height="500px" alt="">
+                  </div>
+                    <div class="gifcontent col-sm-12 col-md-12 col-lg-6 col-xl-6  shadow-lg" style="background-color: white">
+                        <div  class="text-center">
                             <header class="text-center">
                                 <h3 style="color: #cc0064;">Be a Smart Influencer with our smart Links !</h3>
                             </header>
                             <p >A link-in-bio solution which will help you connect audiences to all your content with just one link.</p>
 
                             <p class="text-center mt-4 mb-0">
-                                <a data-scroll href="#tm-section-2" class="btn tm-btn-secondary btn-primary">Get Started for Free</a>
+                                <a data-scroll href="#" class="btn tm-btn-secondary btn-primary">Get Started for Free</a>
                             </p>
 
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
 
-                      <img src="img/gif1.gif" alt="">
-                    </div>
                 </div>
             </div>
         </section>
@@ -220,22 +220,30 @@ $(document).ready(function() {
 
           </div>
         </section>
-        <section class="mid-sec1">
-          <div class="mid-div1">
-            <div class="row">
-              <div class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xsm-12 mid-content">
-                <h3>In depth Analytics of Clicks and Visitors</h3>
-                <p>Track your visitors with Google Analytics, retarget with Facebook pixel and have all your visitors data in hand.</p>
+        <section class="tm-section tm-section-1">
+          <br><br>
+            <div class=" gifcontainer">
+                <div class="gifrow row" >
+                  <div class="gifcontent gifcontent2 col-sm-12 col-md-12 col-lg-6 col-xl-6  shadow-lg" style="background-color: white;min-height: 350px; margin-bottom: 20px">
+                      <div  class="text-center">
+                          <header class="text-center">
+                              <h3 style="color: #cc0064;">In depth Analytics of Clicks and Visitors</h3>
+                          </header>
+<p>Track your visitors with Google Analytics, retarget with Facebook pixel and have all your visitors data in hand.</p>
+                          <p class="text-center mt-4 mb-0">
+                              <a data-scroll href="#" class="btn tm-btn-secondary btn-primary">Get Started for Free</a>
+                          </p>
 
-              </div>
-              <div class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xsm-12 ">
+                      </div>
+                  </div>
+                  <div class="gifclass col-sm-12 col-md-12 col-lg-6 col-xl-6" style="text-align: center">
+                      <img src="img/googleanalytics.jpg" style="margin: auto" min-width="300px" height="300px" alt="">
+                  </div>
 
-                                  <img style="border-radius: 20%;" src="img/googleanalytics.jpg" alt="">
-              </div>
+
+                </div>
             </div>
-                    </div>
-                    <p><a href="#" class="btn tm-btn-secondary btn-danger">Get Started for free</a></p>
-
+            <br><br>
         </section>
         <section id="tm-section-2" class="tm-section pt-2 pb-2 sec2" >
             <div class="container">
@@ -254,16 +262,17 @@ $(document).ready(function() {
                 </div>
             </div>
         </section>
-        <section class="mid-sec1">
-          <div class="mid-div1">
-            <div class="row">
+        <section class="tm-section tm-section-1" style="background-color: #dddddd">
+          <br><br>
+            <div class=" gifcontainer">
+                <div class="gifrow row">
+                  <div class="gifclass col-sm-12 col-md-12 col-lg-6 col-xl-6" style="text-align: center">
+                      <img src="img/sme2.jpg" style="margin: auto" min-width="300px" height="500px" alt="">
+                  </div>
+                    <div class="gifcontent col-sm-12 col-md-12 col-lg-6 col-xl-6  shadow-lg" style="background-color: white">
+                        <div  class="text-center" style="margin-top: 20px;">
 
-              <div class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xsm-12 mid-content">
-
-                    <img style="border-radius: 20%;height: 350px ; width: 350px;" src="img/sme2.jpg" alt="">
-              </div>
-              <div class="col-xlg-6 col-lg-6 col-md-12 col-sm-12 col-xsm-12 ">
-                <h4>KPIN .IN enables you to Integrate your social media platform together with your Bio You can add </h4>
+                            <h4>KPIN .IN enables you to Integrate your social media platform together with your Bio You can add </h4>
                 <ul class="links">
                   <li>Instagram </li>
                   <li>Youtube</li>
@@ -274,11 +283,16 @@ $(document).ready(function() {
 
                 </ul>
                 <p>And many more</p>
-                 <p><a href="#" class="btn tm-btn-secondary btn-warning">Get Started for free</a></p>
+                            <p class="text-center mt-4 mb-0">
+                                <a data-scroll href="#tm-section-2" class="btn tm-btn-secondary btn-primary">Get Started for Free</a>
+                            </p>
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
-
-          </div>
+            <br><br>
         </section>
         <section class="sec4">
           <div class="container-fluid" >
@@ -353,7 +367,16 @@ $(document).ready(function() {
             </div>
         </section>  -->
 
-
+<section class="bg-primary last-sec" >
+  <br>
+  <div class="" style="color: white; text-align: center">
+    <h2 style="font-weight: bold">Try it for free</h2>
+    <p>Thousands of people use bio as a simple way to build their own personal website in seconds. Create your own meaningful link in bio today for free. Join for free</p>
+    <a href="#" class="btn">Get Started for free</a>
+  </div>
+  <br> <br>
+</section>
+<br>
 <!--==========================
   Footer
 ============================-->
