--- a/terms.html
+++ b/terms.html
@@ -208,7 +208,7 @@ $(document).ready(function() {
 <!--==========================
   Footer starts
 ============================-->
-<footer id="footer" class="bg-primary " style="color: white !important; margin: 20px; padding: 20px;">
+<footer id="footer" class="bg-primary " style="color: white !important; margin: 0px; margin-top: 20px; padding: 20px;">
   <div class="footer-top">
     <div class="container">
       <div class="row" style="text-align: center">
