--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ $(document).ready(function() {
                             <p class="text-center mt-4 mb-0">
                                 <a data-scroll href="#" class="btn tm-btn-secondary btn-primary">Get Started for Free</a>
                             </p>
-
+                           <br>
                         </div>
                     </div>
 
@@ -171,55 +171,7 @@ $(document).ready(function() {
                 </div>
             </div>
         </section>
-        <div class="head">
-            <h3 style="font-weight: bold">HOW IT WORKS?</h3>
-        </div>
 
-        <section class="sec4">
-          <div class="container-fluid" >
-
-
-            <div class="row">
-
-              <div class=" col-lg-4 col-md-12 col-sm-12 col-xsm-12 service-main wow bounceInUp" data-wow-duration="1.4s">
-
-                  <div class="card card2 shadow-lg p-3 mb-5 bg-white rounded">
-                      <header>
-                          <h2 class="tm-color-primary">Create a Project</h2>
-                      </header>
-                      <p>Give an interesting name to it.Select whether you want a Bio page or just want to shorten a link to add into your instagram profile.</p>
-
-                  </div>
-
-
-              </div>
-              <div class="col-lg-4 col-md-12 col-sm-12 col-xsm-12 service-main wow bounceInUp" data-wow-duration="1.4s">
-                <div class="card card2 shadow-lg p-3 mb-5 bg-white rounded">
-                    <header>
-                        <h2 class="tm-color-primary">Created A Short Link</h2>
-                    </header>
-                    <p>You are ready to share it on your favorite platforms.Now you can check your stats anytime and optimize your content.</p>
-
-                </div>
-
-              </div>
-
-              <div class="col-lg-4 col-md-12  col-sm-12 col-xsm-12 service-main wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-                <div class="card  card2 shadow-lg p-3 mb-5 bg-white rounded">
-                    <header>
-                        <h2 class="tm-color-primary">Created a Bio page, Need Help Setting it?</h2>
-                    </header>
-                    <p>Give a name to your Bio page, give a beautiful description and connect all your social media handles .Isn’t it so easy? You got your very first Bio page ready in minutes. Update it anytime you want and share it all over the internet world and grab more viewers.</p>
-
-                </div>
-
-              </div>
-
-
-            </div>
-
-          </div>
-        </section>
         <section class="tm-section tm-section-1">
           <br><br>
             <div class=" gifcontainer">
@@ -286,7 +238,7 @@ $(document).ready(function() {
                             <p class="text-center mt-4 mb-0">
                                 <a data-scroll href="#tm-section-2" class="btn tm-btn-secondary btn-primary">Get Started for Free</a>
                             </p>
-
+                     <br>
                         </div>
                     </div>
 
@@ -374,13 +326,13 @@ $(document).ready(function() {
     <p>Thousands of people use bio as a simple way to build their own personal website in seconds. Create your own meaningful link in bio today for free. Join for free</p>
     <a href="#" class="btn">Get Started for free</a>
   </div>
-  <br> <br>
-</section>
 <br>
+</section>
+
 <!--==========================
   Footer
 ============================-->
-<footer id="footer" class="bg-primary " style="color: white !important; margin: 0px; margin-top: 20px; padding: 20px;">
+<footer id="footer" class="" style="background-color: #111d5e; color: white !important; margin: 0px;  padding: 20px;">
   <div class="footer-top">
     <div class="container">
       <div class="row" style="text-align: center">
@@ -388,7 +340,7 @@ $(document).ready(function() {
         <div class="col-lg-4 col-md-4 footer-info">
           <h4>Support</h4>
           <ul class="links">
-            <li><a href="#" target="_blank" >How it works</a></li>
+            <li><a href="works.html" target="_blank" >How it works</a></li>
             <li><a href="#" target="_blank" >Contact</a></li>
           </ul>
         </div>
@@ -402,7 +354,7 @@ $(document).ready(function() {
             <li><i class="ion-ios-arrow-right"></i> <a href="http://www.kohliconnect.com/">Kohli Connect</a></li>
             <li><i class="ion-ios-arrow-right"></i> <a href="http://www.kohlimail.com/default.php">Kohli Mail</a></li>
             <li><i class="ion-ios-arrow-right"></i> <a href="http://hotjob.club/">HotJob Club</a></li>
-            <li><i class="ion-ios-arrow-right"></i> <a href="http://www.kohlieducation.in/">Kohli Education</a></li>
+           <li><i class="ion-ios-arrow-right"></i> <a href="http://www.kohlieducation.in/">Kohli Education</a></li>
             <li><i class="ion-ios-arrow-right"></i> <a href="https://www.kohliwebdesign.com/">Kohli WebDesign</a></li>
             <li><i class="ion-ios-arrow-right"></i> <a href="http://www.livedesk.pro/">Live Desk</a></li>
           -->
