--- a/kpinVslinktree.html
+++ b/kpinVslinktree.html
@@ -370,18 +370,28 @@ Detailed google analysis (in premium version)
 <!--==========================
   main ends
 ============================-->
+<section class="bg-primary last-sec" >
+  <br>
+  <div class="" style="color: white; text-align: center">
+    <h2 style="font-weight: bold">Try it for free</h2>
+    <p>Thousands of people use bio as a simple way to build their own personal website in seconds. Create your own meaningful link in bio today for free. Join for free</p>
+    <a href="#" class="btn">Get Started for free</a>
+  </div>
+<br>
+</section>
+
 <!--==========================
-  Footer starts
+  Footer
 ============================-->
-<footer id="footer" class="bg-primary " style="color: white !important; margin: 0px; margin-top: 20px; padding: 20px;">
+<footer id="footer" class="" style="background-color: #111d5e; color: white !important; margin: 0px;  padding: 20px;">
   <div class="footer-top">
     <div class="container">
-      <div class="row" style="text-align: center">
+      <div class="row" style="text-align: center; border-bottom-width: 0px;">
 
         <div class="col-lg-4 col-md-4 footer-info">
           <h4>Support</h4>
           <ul class="links">
-            <li><a href="#" target="_blank" >How it works</a></li>
+            <li><a href="works.html" target="_blank" >How it works</a></li>
             <li><a href="#" target="_blank" >Contact</a></li>
           </ul>
         </div>
@@ -391,7 +401,14 @@ Detailed google analysis (in premium version)
           <ul class="links">
             <li> <a href="privacy-policy.html" target="_blank" >Privacy Policy</a></li>
             <li> <a href="terms.html" target="_blank" >Terms of Service</a></li>
-
+          <!--  <li><i class="ion-ios-arrow-right"></i> <a href="https://www.kohlihosting.com/">Kohli Hosting</a></li>
+            <li><i class="ion-ios-arrow-right"></i> <a href="http://www.kohliconnect.com/">Kohli Connect</a></li>
+            <li><i class="ion-ios-arrow-right"></i> <a href="http://www.kohlimail.com/default.php">Kohli Mail</a></li>
+            <li><i class="ion-ios-arrow-right"></i> <a href="http://hotjob.club/">HotJob Club</a></li>
+            <li><i class="ion-ios-arrow-right"></i> <a href="http://www.kohlieducation.in/">Kohli Education</a></li>
+            <li><i class="ion-ios-arrow-right"></i> <a href="https://www.kohliwebdesign.com/">Kohli WebDesign</a></li>
+            <li><i class="ion-ios-arrow-right"></i> <a href="http://www.livedesk.pro/">Live Desk</a></li>
+          -->
           </ul>
         </div>
 
@@ -445,6 +462,14 @@ Detailed google analysis (in premium version)
       <span class="mwl">#MadeWithLove</span><span class="ks" style="color: white">&hearts; <a href="http://www.kohli.studio/">Kohli.Studio</span></a>
     </div>
   </div>
+
+
+
+
+
+
+
+
 
 </footer>
 </div>
