add feature section

--- a/index.html
+++ b/index.html
@@ -170,8 +170,84 @@ $(document).ready(function() {
                     </div>
                 </div>
             </div>
-        </section>
+  </section>
+    <section class="features-section" style="text-align: center">
+      <br>
+      <header>
+          <h2 class=" tm-color-primary change-to-bold">Features</h2>
+          <br>
+      </header>
+      <div class="row oddf">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-content">
+          <br>
+          <h3 class="change-to-bold">Google Analytics</h3>
+          <br>
+          <p>Gain information regarding your visitors, understand what content works for you and optimize your content accordingly.</p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-img">
+          <img src="img/feature1.png" width="350" height="300" alt="Google Analytics">
+        </div>
+      </div>
+      <div class="row  evenf" >
 
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-img">
+          <img src="img/feature2.png" width="350" height="300" alt="Google Analytics">
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-content" >
+          <br>
+          <h3 class="change-to-bold">Facebook Pixels</h3>
+          <br>
+          <p>Retarget your Audience with Facebook Pixel and have all the data of your visitors in your hand with just a click.</p>
+        </div>
+      </div>
+      <div class="row oddf" >
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-content" >
+          <br>
+          <h3 class="change-to-bold">In-depth Statistics</h3>
+          <br>
+          <p>Get information on no. of visitors, links etc.</p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-img">
+          <img src="img/feature3.jpg" width="350" height="300" alt="Google Analytics">
+        </div>
+      </div>
+      <div class="row evenf" >
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-img">
+          <img src="img/feature4.png" width="350" height="300" alt="Google Analytics">
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-content" >
+          <br>
+          <h3 class="change-to-bold">Links Scheduling</h3>
+          <br>
+          <p>Schedule your links to get active.</p>
+        </div>
+      </div>
+      <div class="row oddf" >
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-content" >
+          <br>
+          <h3 class="change-to-bold">SEO</h3>
+          <br>
+          <p>Check where you stand in the market and make your content top-notch. Use SEO to give your users a better version for your talent.</p>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-img">
+          <img src="img/feature5.jpg" width="350" height="300" alt="Google Analytics">
+        </div>
+      </div>
+      <div class="row evenf">
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-img">
+          <img src="img/feature6.jpg" width="350" height="300" alt="Google Analytics">
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xsm-12 feature-content" >
+          <br>
+          <h3 class="change-to-bold">Unlimited Custom Domain</h3>
+          <br>
+          <p>Make short links and Bio page links your own by keeping it linked to your brand name.</p>
+        </div>
+      </div>
+      <br>
+    </section>
         <section class="tm-section tm-section-1">
           <br><br>
             <div class=" gifcontainer">
